# tranching-chain

./: .dockerignore  .env  .eslintignore  .gitignore  .gitmodules  .markdownlintignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  docker-compose-cpu-runner.yml  docker-compose-ext-node.yml  docker-compose-gpu-runner-cuda-12-0.yml  docker-compose-gpu-runner.yml  docker-compose-runner-nightly.yml  docker-compose.yml  flake.nix  package.json
.cargo/: config.toml
.githooks/: pre-commit
core/: CHANGELOG.md
core/lib/basic_types/: Cargo.toml
core/lib/circuit_breaker/: Cargo.toml
core/lib/commitment_utils/: Cargo.toml
core/lib/prometheus_exporter/: Cargo.toml
docker/contract-verifier/: Dockerfile
docker/cross-external-nodes-checker/: Dockerfile
docker/external-node/: Dockerfile
docker/zk-environment/: 20.04_amd64_cuda_11_8.Dockerfile  20.04_amd64_cuda_12_0.Dockerfile  Dockerfile
docs/guides/: launch.md  repositories.md  setup-dev.md
docs/specs/: blocks_batches.md  introduction.md
infrastructure/zk/: README.md
prover/: CHANGELOG.md
prover/circuit_synthesizer/: Cargo.toml
prover/proof_fri_compressor/: Cargo.toml
prover/prover_fri/: Cargo.toml  README.md
prover/prover_fri_types/: Cargo.toml
prover/prover_fri_utils/: Cargo.toml
prover/setup_key_generator_and_server/: Cargo.toml
prover/vk_setup_data_generator_server_fri/: Cargo.toml
prover/witness_generator/: Cargo.toml
prover/witness_vector_generator/: Cargo.toml
sdk/micro-rs/: CHANGELOG.md
sdk/micro-web3.js/: README.md
spellcheck/: era.cfg
(+95 files in other folders)
