[package]
name = "micro_commitment_utils"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/tidalchain/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_types = { path = "../../lib/types" }
micro_utils = { path = "../../lib/utils" }
zkevm_test_harness = { git = "https://github.com/tidalchain/micro-zkevm_test_harness.git", branch = "v1.4.0" }
