[package]
name = "prometheus_exporter"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/tidalchain/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
anyhow = "1.0"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
tokio = "1"
vise = { git = "https://github.com/tidalchain/vise.git", version = "0.1.0", rev = "65e0b70e30c8c4674dc4cd25d793b6e1af3578a0" }

[dependencies.vise-exporter]
git = "https://github.com/tidalchain/vise.git"
version = "0.1.0"
rev = "65e0b70e30c8c4674dc4cd25d793b6e1af3578a0"
features = ["legacy"]
